tests/machine/x/c/inner_join.error
exit status 1
/workspace/mochi/tests/machine/x/c/inner_join.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/inner_join.c:75:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
   75 |       result_item_list_t_create(orders_len * customers_len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/inner_join.c:75:7: error: invalid initializer
